monolith-demo/src/main/k8s/monolith-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-demo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: monolith-demo
  template:
    metadata:
      labels:
        app: monolith-demo
    spec:
      containers:
        - name: monolith-demo
          image: chensoul/monolith-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            successThreshold: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            successThreshold: 1
