monolith-demo/src/main/k8s/monolith-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-demo-service
spec:
  type: NodePort
  selector:
    app: monolith-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30005
