monolith-demo/src/main/k8s/monolith-demo-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: monolith-demo-ingress
spec:
  defaultBackend:
    service:
      name: monolith-demo
      port:
        number: 8080
